@@ -1,0 +1,25 @@
+===========================================================================
+$NetBSD: MESSAGE,v 1.1 2005/03/04 16:04:59 reinoud Exp $
+
+Due to oddities in the blender package, running `blender' will soft-link
+the global blender directory to your home directory as ~/.blender to run
+properly with all scripts attached.
+
+Customisation can be done individually by copying the directory ~/.blender
+points to to your own homedirectory :
+	rm ~/.blender
+	cp -R ${PREFIX}/share/blender ~/.blender
+
+and customise/add your own stuff like scripts etc. in it.
+
+To revert to `factory' settings and site-setup files, just remove the
+~/.blender directory/link and the script will add the softlink again.
+
+Note that blender will create a ~/.B.blend file that serves as the empty or
+startup file with all settings in it. A file called ~/.Blog will hold the
+last file edited with blender.
+
+Executing ${PREFIX}/bin/blender-bin will bypass the convenience script
+${PREFIX}/bin/blender
+
+===========================================================================
